--- a/ListadeCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@drawable/config"
+                android:onClick="iniciarConfig"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
