--- a/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
+++ b/ListadeCompras/app/src/main/res/layout/activity_adicionar_item.xml
@@ -71,7 +71,8 @@
                 android:textColor="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:autofillHints="" />
 
             <Button
                 android:id="@+id/botao_salvar"
@@ -188,11 +189,12 @@
                 android:layout_marginRight="8dp"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="0,00"
+                android:hint="@string/hint_valor"
                 android:inputType="numberDecimal"
                 android:textColor="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_quant" />
+                app:layout_constraintTop_toBottomOf="@+id/text_quant"
+                android:autofillHints="" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
